<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">App Lock</string>
    <string name="security_app_pro_successful">Protected successfully</string>
    <string name="security_applock_open">AppLock is running</string>
    <string name="security_applock_permission">For better privacy protection, please allow access permission.</string>
    <string name="security_applock_permission_allow">Allow</string>
    <string name="security_applock_stop">AppLock is stopped</string>
    <string name="security_apply_">Apply</string>
    <string name="security_apps_open_permission">Find EOS Cleaner and enable it</string>
    <string name="security_ask_lock">To make %1$s more safer</string>
    <string name="security_ask_lock_protect">Protect it by  AppLock</string>
    <string name="security_btn_next">Next</string>
    <string name="security_cancel">Cancel</string>
    <string name="security_change_password">Change Password</string>
    <string name="security_change_pattern">Change Pattern</string>
    <string name="security_confirm_passwd_tip">reenter your passcode to confirm</string>
    <string name="security_done">Done</string>
    <string name="security_draw_pattern">Draw a pattern</string>
    <string name="security_draw_pattern_next">Confirm pattern</string>
    <string name="security_enter_password">Enter your password to unlock this app</string>
    <string name="security_every_time">Always lock</string>
    <string name="security_pretent_calender">Calendar</string>
    <string name="security_pretent_fails">Fake cover isn\'t set</string>
    <string name="security_pretent_fc">Force Close</string>
    <string name="security_pretent_finger">FingerPrint</string>
    <string name="security_pretent_force_close">Unfortunately, "%1$s" has stopped</string>
    <string name="security_pretent_icon_1">Clock</string>
    <string name="security_pretent_icon_2">Calc</string>
    <string name="security_pretent_icon_3">Weather</string>
    <string name="security_pretent_icon_default">Default</string>
    <string name="security_pretent_none">No fake cover</string>
    <string name="security_pretent_notepad">Notepad</string>
    <string name="security_pretent_selector">Replace app icon</string>
    <string name="security_pretent_setting_msg"><![CDATA[Please <b>move your finger</b> from left to right along the "Close" button to turn on fake cover]]></string>
    <string name="security_finger_tip">Tap the fingerprint twice and hold it to turn on fingerprint identification</string>
    <string name="security_five_min">5 minutes</string>
    <string name="security_five_start">We are committed to protecting your privacy. Could you give us a 5-star-rating? </string>
    <string name="security_float_action_switch_widget">Float Widget</string>
    <string name="security_for_lock_new">Do you want to lock \"%1$s\"?</string>
    <string name="security_forget_password">Forgot password</string>
    <string name="security_help_share">Rate me</string>
    <string name="security_hide_path">Hide pattern draw path</string>
    <string name="security_hide_successful">Hide %1$s success</string>
    <string name="security_input_password">Please enter 6-digits PIN code</string>
    <string name="security_intru_f_app">This guy is trying to break in your %1$s. We catched him.</string>
    <string name="security_intrude_five">5 times</string>
    <string name="security_intrude_five_rate">Your praise will encourage us do better.</string>
    <string name="security_intrude_four">4 times</string>
    <string name="security_intrude_one">1 time</string>
    <string name="security_intrude_self">Intruder Selfie</string>
    <string name="security_intrude_shutter">Enable shutter sound</string>
    <string name="security_intrude_three">3 times</string>
    <string name="security_intrude_two">2 times</string>
    <string name="security_intruder_help">Help</string>
    <string name="security_intruder_off">Intruder detector is turned off</string>
    <string name="security_intruder_off_new">Intruder detector is turned off</string>
    <string name="security_intruder_on">Intruder detector is turned on</string>
    <string name="security_intruder_on_new">Intruder detector is turned on</string>
    <string name="security_intruder_open">Catch intruder for you</string>
    <string name="security_intruder_setting">Intruder selfie </string>
    <string name="security_intruder_setting_new">Intruder selfie setting</string>
    <string name="security_intruder_tip">Incorrect code entered</string>
    <string name="security_later_">Later</string>
    <string name="security_lock_app">Lock App</string>
    <string name="security_lock_success">Lock %1$s success</string>
    <string name="security_lock_to_open">Tap to turn on Super AppLock</string>
    <string name="security_lock_to_stop">Tap to turn off Super AppLock</string>
    <string name="security_login_with_email">Verify your ID with Google Account to reset your password</string>
    <string name="security_my_close">Close</string>
    <string name="security_my_theme">Theme</string>
    <string name="security_mypretent">Fake Cover</string>
    <string name="security_new_intruder">Intruder Selfie </string>
    <string name="security_newapp_lock">Lock new apps</string>
    <string name="security_no_google_account">There is no Google Account in your phone</string>
    <string name="security_no_intruder">There is no intruder so far. </string>
    <string name="security_over_short">Brief Setting</string>
    <string name="security_password_lock">PIN Code Lock</string>
    <string name="security_password_not_match">Passwords do not match</string>
    <string name="security_password_setsuccessful">Password set success</string>
    <string name="security_pattern_lock">Pattern Lock</string>
    <string name="security_pattern_short">Connect at least 3 dots</string>
    <string name="security_pause_protect">Stop Protect</string>
    <string name="security_permission_grand">Grant</string>
    <string name="security_permission_msg">"Can't lock apps without your permission after Lollipop, grant it to us please"</string>
    <string name="security_protect">Protect</string>
    <string name="security_protect_apps">Protect apps with a\n password</string>
    <string name="security_protecting">Protecting</string>
    <string name="security_rate_bad">BAD</string>
    <string name="security_rate_good">GOOD</string>
    <string name="security_rate_msg">If you like AppLock, please give us a 5-star-rating.</string>
    <string name="security_rate_t">Rate Applock</string>
    <string name="security_reset_passwd_2_btn">Reset password</string>
    <string name="security_reset_password">Reset password</string>
    <string name="security_security_set_pretent_success">Fake cover is set successfully</string>
    <string name="security_select_apps">Select apps to protect</string>
    <string name="security_select_apps_locked">The apps below are locked</string>
    <string name="security_set_confirm_password">CONFIRM PASSWORD</string>
    <string name="security_set_passwd_tip">enter any digits you want</string>
    <string name="security_set_password">SET PASSWORD</string>
    <string name="security_set_password_successful">"Can't set password"</string>
    <string name="security_set_pattern">SET PATTERN</string>
    <string name="security_short_exit">Brief exit</string>
    <string name="security_short_exit_detail">Not to relock after a brief exit</string>
    <string name="security_short_exit_off">Relock after screen off</string>
    <string name="security_short_exit_slot">Brief exit time limit</string>
    <string name="security_show_noti">Toggle notification</string>
    <string name="security_show_noti_desc">Show toggle button in the notification</string>
    <string name="security_show_permission">Permission</string>
    <string name="security_show_successful">Show %1$s success</string>
    <string name="security_start_rat">5-Stars-Rating</string>
    <string name="security_tab_setting">Settings</string>
    <string name="security_to_save">Save</string>
    <string name="security_try_later">Please try later</string>
    <string name="security_turnon_intruder">Turn on intruder</string>
    <string name="security_unlock_me">Unlock the App</string>
    <string name="security_unlock_success">Unlock %1$s success</string>
    <string name="security_unlock_type">Unlock type</string>
    <string name="security_until_screen_off">Until screen off</string>
    <string name="security_update">Install</string>
    <string name="security_update_title">New Version Update</string>
    <string name="security_use_normal">Password Lock</string>
    <string name="security_use_password">Use Password To Unlock</string>
    <string name="security_use_pattern">Pattern Lock</string>
    <string name="security_use_pattern_">Use Pattern To Unlock</string>
    <string name="security_use_theme_success">theme is changed</string>
    <string name="security_verify">Verify</string>
    <string name="setting_category_pattern">Pattern</string>
    <string name="setting_digital_code">PIN code</string>
    <string name="security_show_newversion">UPDATE</string>
    <string name="security_show_newversion_inf">The new version has been released, hurry to update it!</string>
    <string name="security_facebook">Facebook</string>
    <string name="security_google">Google+</string>
    <string name="security_visitor_on">AppLock is running</string>
    <string name="security_visitor_off">AppLock is stopped</string>
    <string name="security_nofification">Notification</string>
    <string name="security_power_mode">Power saving</string>
    <string name="security_power_mode_des">Reduce 50% power consumption, extend phone standby time.</string>
    <string name="security_power_mode_des_description">Enable EOS Cleaner here to:
\\n1. Boost device and get extra performance
\\n2. Stop battery draining apps
\\n3. Clean system junks
\\n4. Reduce 50% power consumption, extend phone standby time
\\n
\\nWe solemnly promise:
\\nEOS Cleaner will NEVER collect any privacy information.
\\n
\\nPlease note that:
\\nThere is a standard confirmation procedure when enabling Accessibility Service on all Android device. If you receive these privacy warnings, just ignore them please.</string>
    <string name="security_service_title">Accessibility</string>
    <string name="security_service_description">Stable service and less power consumption.</string>
    <string name="security_settings_preference">Preference</string>
    <string name="security_stop_applock">Stop Applock</string>
    <string name="security_stop_applock_information">Your apps will not be protected if you stop AppLock service. Continue?</string>
    <string name="security_fingerprint">Fingerprint</string>
    <string name="security_open_fingerprint">Use fingerprint</string>
    <string name="security_go_open_fingerprint">To set up immediately</string>
    <string name="security_fingerprint_many_error">Please use password</string>
    <string name="security_password_short">6 digits is required</string>
    <string name="security_app_encourage">Rate us!</string>
    <string name="security_five_good">How do you feel like this app?</string>
    <string name="security_search_content">Search apps...</string>
</resources>