<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/security_show_brief"
    android:orientation="vertical">

    <TextView
        android:textColor="@color/security_security_black_87"
        android:layout_width="wrap_content"
         android:textSize="21sp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="17dp"
        android:text="@string/security_short_exit_slot" />

    <LinearLayout
        android:layout_marginTop="17dp"
        android:id="@+id/bri_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_bri_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:textColor="@color/leadr_color"
            android:id="@+id/text_bri_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/security_every_time"
            android:textSize="16sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/bri_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="17dp"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/image_bri_two"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             />

        <TextView
            android:id="@+id/text_bri_two"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/security_five_min"
            android:textSize="16sp" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/bri_three"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="25dp"
        android:layout_marginTop="17dp"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/image_bri_three"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             />

        <TextView
            android:id="@+id/text_bri_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/security_until_screen_off"
            android:textSize="16sp" />


    </LinearLayout>
</LinearLayout>
