<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/security_applock_bac"
    android:orientation="vertical">

    <RelativeLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#fff"
            android:textSize="24sp" />

        <ImageButton
            android:visibility="gone"
            android:id="@+id/back"
            android:layout_width="56dp"
            android:layout_height="48dp"
            android:background="@null"
             />
    </RelativeLayout>


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:background="@null"
        android:orientation="vertical">


        <ImageView
            android:layout_marginTop="45dp"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:background="@drawable/ic_launcher"
            />
        <TextView
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/title"
            android:text="@string/security_set_pattern"
            android:textColor="@color/security_body_text_1_inverse"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:gravity="center"
            android:text="@string/security_draw_pattern"
            android:textColor="#fff"
            android:textSize="16sp"/>

    </LinearLayout>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:gravity="center">
        <!--<LockPatternView-->
            <!--android:id="@+id/lpv_lock"-->
            <!--inner="@drawable/pattern_inner_normal"-->
            <!--outer="@drawable/pattern_normal"-->
            <!--outers="@drawable/pattern_right"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content" />-->

        <com.eos.manager.page.SecurityPatternView

            android:id="@+id/lpv_lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button

            android:id="@+id/number_cancel"
            android:layout_width="149dp"
            android:layout_height="40dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/security_setpassword_bootom"
            android:textSize="16sp"
            android:text="@string/security_reset_passwd_2_btn"
            android:textColor="@color/security_theme_primary" />
    </LinearLayout>


</LinearLayout>