<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="8dp"
    android:layout_gravity="center_horizontal"


    >

    <LinearLayout
        android:id="@+id/five_plan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_bg"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        android:layout_gravity="center_horizontal"
        >

    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@drawable/security_good_bac">

        <ImageView
            android:id="@+id/scan_result_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/security_app_good" />

        <TextView
            android:id="@+id/security_title_bar_te"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/security_app_encourage"
            android:textColor="@color/security_rate_us"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif"
        android:text="@string/security_five_good"
        android:textColor="#8a8a8a"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/two_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView

            android:id="@+id/security_bad_tit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/security_rate_bad"
            android:textColor="#8a8a8a"
            android:textSize="16sp" />


        <View
            android:layout_width="1dp"
            android:layout_height="22dp"
            android:background="@drawable/security_good_driver"></View>

        <TextView
            android:id="@+id/security_good_tit"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/security_rate_good"
            android:textColor="#7cae6f"
            android:textSize="16sp"

            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/two_button"></View>


    </LinearLayout>

    <com.security.manager.SearchView
        android:id="@+id/search_id"
        android:layout_width="match_parent"
        android:layout_height="60dp"></com.security.manager.SearchView>

</LinearLayout>

