<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/security_applock_bac"
    android:orientation="vertical">

    <RelativeLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/app_name"
            android:gravity="center"
            android:textSize="24sp"
            android:textColor="#fff"/>
        <ImageButton
            android:layout_width="56dp"
            android:layout_height="48dp"
            android:background="@null"
            android:id="@+id/back"
         />
    </RelativeLayout>


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="201dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_marginTop="45dp"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:background="@drawable/ic_launcher"
            />


        <TextView
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/title"
            android:text="@string/security_set_password"
            android:fontFamily="sans-serif-light"

            android:textColor="#fff"
            android:textSize="17sp" />

        <TextView
            android:visibility="gone"
            android:id="@+id/tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/security_set_passwd_tip"
            android:textColor="@color/security_body_text_1_inverse"
            android:textSize="18sp"/>

        </LinearLayout>

    <com.security.manager.page.NumberDot
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/passwd_dot_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        drawable="@drawable/security_passwd_dot_create"
        android:orientation="horizontal" />

    <include
        android:id="@+id/numpad"
        layout="@layout/security_num_keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>