<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="426dp"
    android:orientation="vertical">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:src="@drawable/reset_password_to" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="-10dp"
            android:background="@color/security_theme_primary"
            android:gravity="center"
            android:text="@string/security_reset_password"
            android:textColor="@android:color/white"
            android:textSize="22sp"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@drawable/security_normal_bootom_rectangle"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/pattern"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="35dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/reset_pattern"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/setting_reset_pattern" />


            <TextView
                android:id="@+id/reset_pattern_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/setting_category_pattern"
                android:textSize="15sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/digital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/reset_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/setting_reset_password" />

            <TextView
                android:id="@+id/reset_password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/setting_digital_code"
                android:textColor="@color/security_theme_primary"
                android:textSize="15sp"
                android:textStyle="bold"

                />

        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="14dp"
        android:background="@android:color/transparent"></View>


</LinearLayout>
